styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Jost", sans-serif;
}

/* GENERAL */

body {
  background-color: #fff4e6;
}

.border-round {
  border-radius: 1.25rem;
}

.line {
  margin: 2rem 0 1.5rem;
  padding: 0.063rem 0;
  background-color: #e9ecef;
}

h3,
p,
li,
th,
td {
  color: #495057;
}

h2 {
  color: #a8522f;
  font-size: 2rem;
  font-weight: 700;
}

h1,
h2 {
  font-family: "Fraunces", serif;
}

.ingredients-ul li,
.preparation-ul li,
.instructions-ol li {
  padding-left: 1rem;
}

.ingredients-ul li:not(:first-child),
.preparation-ul li,
.instructions-ol li:not(:first-child) {
  margin-top: 0.75rem;
}

.preparation-ul li,
.ingredients-ul li,
.instructions-ol li,
.darkorange {
  color: #a8522f;
}

.ingredients-ul,
.instructions-ol,
.nutrition-cont p,
.nutrition-table {
  margin-top: 1.5rem;
}

/* TOP SECTION */

.container {
  font-size: 1rem;
  font-weight: 500;
  max-width: 50vw;
  margin: 11.25rem auto;
  padding: 3.125rem;
  background-color: #fff;
  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.06);

  display: flex;
  flex-direction: column;
}

.recipe-img {
  height: auto;
  max-width: 100%;
}

.title {
  font-size: 3.25rem;
  font-weight: 700;
  color: #343a40;

  margin-top: 2.25rem;
}

.description {
  margin: 1.5rem 0 1.75rem;
  font-size: 1.125rem;
}

/* PREPARATION SECTION */

.preparation-cont {
  padding: 1.75rem 0;
  color: #a61e4d;

  background-color: #fff0f6;
}

.preparation-title {
  color: #a61e4d;
  padding-left: 2rem;
}

.preparation-ul {
  padding: 0 3.5rem;
}

.preparation-ul li {
  color: #a61e4d;
}

/* INGREDIENTS SECTION */

.ingredients-cont {
  margin-top: 2.25rem;
}

.ingredients-ul,
.instructions-ol {
  padding: 0 1.5rem;
}

/* INSTRUCTIONS SECTION */

/* NUTRITION SECTION */

.nutrition-table {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

td {
  padding: 0.75rem 1.5rem;
  border-bottom: 0.063rem solid #e9ecef;
}

.no-line {
  border: none;
}

